implementacion de chatbot y pantalla de reservas (SE DEBE DE AJUSTAR RESPUESTAS DEL CHATBOT - ORDEN LOGICO)

--- a/WebApp/src/index.css
+++ b/WebApp/src/index.css
@@ -102,6 +102,14 @@
     -webkit-perspective: 1000;
     perspective: 1000;
   }
+  
+  /* Optimizaciones de rendimiento para videos */
+  video {
+    -webkit-transform: translateZ(0);
+    transform: translateZ(0);
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+  }
 }
 
 .text-shadow-lg {
